force-app/main/default/objects/ecosystems_svcs__CVA_VD_KPI__c/ecosystems_svcs__CVA_VD_KPI__c.object-meta.xml
<CustomObject>
    <description>Stores KPI information for each Collaborative Value Assessment (CVA) Value Drivers</description>
    <label>CVA Driver KPI</label>
    <nameField>
        <label>Kpi Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CVA Driver KPIs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>