force-app/main/default/objects/ecosystems_svcs__CVA_VD_KPI__c/fields/ecosystems_svcs__actual15__c.field-meta.xml
<CustomField>
    <fullName>ecosystems_svcs__actual15__c</fullName>
    <label>Actual 15</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>